--- a/src/app/encabezado/encabezado.component.html
+++ b/src/app/encabezado/encabezado.component.html
@@ -6,8 +6,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+
+            <li class="nav-item">
+                <a class="nav-link" routerLink="">Inicio</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" routerLink="/clientes">Clientes</a>
