--- a/src/app/agregar-clientes/agregar-clientes.component.html
+++ b/src/app/agregar-clientes/agregar-clientes.component.html
@@ -14,8 +14,12 @@
             <textarea cols="30" rows="5" class="form-control" formControlName="direccion"></textarea>
         </div>
     </form>
-    <button *ngIf="editarClienteFlag == false" [disabled]="!formulario.valid" class="btn btn-primary" (click)="agregarCliente()">Agregar</button>
-    <button *ngIf="editarClienteFlag == true"[disabled]="!formulario.valid" class="btn btn-success" (click)="agregarCliente()">Editar</button>
+    <button *ngIf="editarClienteFlag == false" 
+    [disabled]="!formulario.valid" class="btn btn-primary" (click)="agregarCliente()">Agregar</button>
+    
+    <button *ngIf="editarClienteFlag == true"
+    [disabled]="!formulario.valid" class="btn btn-success" (click)="agregarCliente()">Editar</button>
+    
     <div *ngIf='!formulario.valid' class="alert alert-danger" role="alert">
         Completa el formulario antes de continuar.
     </div>
