--- a/src/app/productos/productos.component.html
+++ b/src/app/productos/productos.component.html
@@ -1,1 +1,22 @@
-<p>productos works!</p>
+<div class="container">
+    <div class="col-sm-5 mb-5 mt-5">
+        <form action="" class="formGroup" >
+            <input type="text" class="form-control" placeholder="Buscar">
+            <button class="btn btn-primary mt-4" routerLink="/agregarProductos">Agregar un nuevo producto</button>
+        </form>    
+    </div>
+    <div class="row" >
+        <div class="col-sm-3 mt-3" *ngFor="let producto of productos">
+            <div class="card" >
+                <div class="card-body">
+                <h5 class="card-title">{{producto.nombre}}</h5>
+                <h6 class="card-subtitle">{{producto.codigo}}</h6>
+                <p class="card-text">{{producto.descripcion}}</p>
+                <p class="card-text">{{producto.precio}}</p>
+                <a href="#" class="card-link" >Agregar </a>
+                <a href="#" class="card-link">Eliminar</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
